[project]
description = "toml file for repl.it"
license = "MIT"
name = "rivtcalc-replit"
readme = "README.md"

[tool]
[tool.poetry]
description = "rivtcalc toml file for repl.it"
license = "MIT"
name = "rivtcalc-replit"
readme = "README.md"
version = "0.1.0"
authors = ["rholland <rholland@structurelabs.com>"]
[tool.poetry.dependencies]
docutils = "0.16"
matplotlib = "^3.2.0"
numpy = "^1.18"
pandas = "1.0"
python = "^3.8"
sympy = "^1.5"
tabulate = "0.8"
antlr4-python3-runtime = "^4.7"
IPython = "^7.11"

[tool.poetry.dependencies.rivtcalc]
git = "https://github.com/rivtcalc/rivtcalc-code"
